tests/snapshots/integration__malformed_ref_block_missing_body_reports_diagnostic.snap
---
source: tests/integration.rs
assertion_line: 349
expression: stderr
---
<fixture>:4:1: error[E_PARSE_UNKNOWN]: unsupported syntax: `[E_REF_INVALID] malformed ref syntax: `ref over A, B``
ref over A, B
^^^^^^^^^^^^^
